# LegacyLazarus-agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
public/: test.css
src/: mellea.py
src/legacy_lazarus/: cli.py  engine.py  ui.py
src/legacy_lazarus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/legacy_lezarus/: engine.py  guardian.py
tests/: test_engine.py
